<resources>
    <string name="app_name">IELTSpeak</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">IELTS SPEAKING</string>
    <string name="nav_header_subtitle">Practice previous questions &amp; answers</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Topics</string>
    <string name="menu_topic">All Topics</string>
    <string name="menu_about">About</string>
    <string name="menu_send_feedback">Send Feedback</string>
    <string name="menu_rate_us">Rate Us</string>
    <string name="rate_us_text">Please support us</string>
    <string name="menu_share_with_friends">Share With Friends</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rating_text_1">Oh, no!</string>
    <string name="rating_text_2">Please leave us some feedback.</string>
    <string name="rating_text_4">You are awesome!</string>
    <string name="rating_text_3">That\'s the best we can get! :)</string>
    <string name="rating_text_5">We like you too!</string>
    <string name="share_msg">Check this awesome app. You can get help for speaking in IELTS exam. It will increase your confidence and help you to be fluent in english. Download now </string>
    <string name="about_info">This app is created for those people who can understand English very well but cannot speak properly or fluently. In this app we collect 30 most common topics for IELTS speaking test. Every topic contains questions that were asked in previous IELTS test. We attached all answers with the questions, so that users can get an idea how to answer the questions properly. You can summarize the answers but that\'s not a good idea. Always try to answer in your own way. If you want us to add more topics with answers, please let us know. So that we can improve our app according to the users need.</string>
    <string-array name="all_topics">
        <item>Accommodation</item>
        <item>Art</item>
        <item>Birthdays</item>
        <item>Books</item>
        <item>Celebrity</item>
        <item>Clothes &amp; Fashion</item>
        <item>Computer</item>
        <item>Environment</item>
        <item>Family</item>
        <item>Food</item>
        <item>Friends</item>
        <item>Gift</item>
        <item>Health</item>
        <item>High School</item>
        <item>Hobby</item>
        <item>Hometown</item>
        <item>Internet</item>
        <item>Lifestyle</item>
        <item>Music</item>
        <item>Newspaper &amp; Magazine</item>
        <item>Noise</item>
        <item>Patience</item>
        <item>Photography</item>
        <item>Sports</item>
        <item>Study</item>
        <item>Transportation</item>
        <item>Travel</item>
        <item>TV &amp; Movies</item>
        <item>Weather</item>
        <item>Work</item>

    </string-array>
    <string-array name="accommodation_questions">
        <item>Q. What kind of accommodation do you live in?</item>
        <item>Q. Is it a big place?</item>
        <item>Q. What is your favourite room in your house? Why?</item>
        <item>Q. Does the place you live in have many amenities?</item>
        <item>Q. Is there anything you would like to change about the place you live in?</item>
        <item>Q. Do you plan to live there for a long time?</item>
        <item>Q. What do you like about living there?</item>
        <item>Q. Do you prefer living in a house or a flat?</item>

    </string-array>
    <string-array name="accommodation_answers">
        <item>Ans: I live in an independent house which has proper fencing and a secure entrance. It has a nice front and a lavish green lawn decked with variety of flowers. At the back side of the house, there is a parking space for two cars. Overall, it is a well-planned building.</item>
        <item>Ans: Yes, it is. There are 4 bedrooms in my house with 1 drawing and dining room and a big kitchen. Each of the bedrooms has attached bathroom. There are also a laundry and storage room as well.</item>
        <item>Ans: Definitely my own bedroom. It’s the personal space where I can do whatever I want without getting scolded by my mom. Besides, my bedroom is an ideal place for me to avoid noise, so I tend to lock myself up in my bedroom whenever I need to concentrate on my study.</item>
        <item>Ans: Yes, the house has everything I need for my daily routines. There is a laundry room with a washing machine, a full kitchen with appliances, and my own bedroom where I keep all of my things. There’s also a 24-hour security guard attending the front gate to our neighborhood.</item>
        <item>Ans: Overall, my house is more than satisfactory. However, if I had to change something, I would expand the dining area. It is the most common space for family members to gather, so I think it would be nice if my house’s dining room could be a little more spacious.</item>
        <item>Ans: Even though I’ve lived there my whole life, I don’t think I will live in this house forever. At some point I eventually plan to move out of my family’s house, most likely when I will begin a university program abroad.</item>
        <item>Ans: I love everything about living there. Specially the location of my house. My house is less than 10 minutes from the largest shopping mall in the city. Besides it has a nice neighborhood and it’s convenient to everything I need.</item>
        <item>Ans: Well, each type has some things to offer me but I would have to go for a house. There’s usually more space, and the water supply is much more reliable.</item>
    </string-array>
    <string-array name="art_questions">
        <item>Q. Are you good at art?</item>
        <item>Q. Did you learn art at school when you were a child?</item>
        <item>Q. Do you think art classes are necessary?</item>
        <item>Q. What kind of art do you like?</item>
        <item>Q. Is it easy to learn how to draw?</item>
        <item>Q. Is art popular in your country?</item>
        <item>Q. Have you ever been to an art gallery?</item>
        <item>Q. Do you think children can benefit from going to art galleries?</item>
    </string-array>
    <string-array name="art_answers">
        <item>Ans: Well, Art is a really vast subject and if it is about drawing things here and there, I would say I am pretty fine at it. But I am surely not one of those who can make some masterpieces.</item>
        <item>Ans: Yes. When I was a child, I joined a drawing class in ‘Ankon Academy’ and my teacher was very pleased with my drawings. I also participated in some drawing competitions back then.</item>
        <item>Ans: Yes, definitely. Learning arts, especially at a young age, can help stimulate children’s cognitive development and encourage them to think outside the box.</item>
        <item>Ans: I like sketching natural things, the ones that are very near to nature. It could be mountains or rivers or the trees, anything that is near to the nature.</item>
        <item>Ans: I think I must say it’s even challenging for a lot of people. I absolutely failed when it comes to drawing still life paintings like fruit and flowers. I think for those who succeed in drawing or arts in general, they first must have God-gifted talent, then comes to the long-term commitment to arts that requires extreme practice and high patience.</item>
        <item>Ans: I would say, art surely does gets importance as people really like to see great art work but when it comes down to choosing arts as a career it is not a very popular choice among people. They prefer pursuing their art goals as a mere hobby.</item>
        <item>Ans: To tell the truth, I have never visited art galleries before. Unless I have a guide to acknowledge me, art galleries would be quite boring for me.</item>
        <item>Ans: I think definitely yes. Art is that part of our lives that brings out the creative side of ours. If children go and visit art galleries, they might be able to understand things better and may be feel motivated to draw things and explore their creative sides.</item>

    </string-array>
    <string-array name="birthdays_questions">
        <item>Q. Do you usually celebrate your birthday?</item>
        <item>Q. Do you enjoy your birthday?</item>
        <item>Q. Can you remember a birthday you enjoyed as a child?</item>
        <item>Q. What did you do on your last birthday?</item>
        <item>Q. What kinds of birthday gifts do you like to receive?</item>
        <item>Q. With whom do you like to celebrate your birthday, family, friends or alone?</item>
        <item>Q. How has the celebrating birthdays changed in the last few decades?</item>
        <item>Q. Do most people celebrate their birthdays in your country?</item>
    </string-array>
    <string-array name="birthdays_answers">
        <item>Ans: No, I am an introvert thereby. I don’t like celebrating my birthday. I prefer staying indoors and spending quality time with my close family members and friends, by having my favorite meal and having a nice conversation.</item>
        <item>Ans: Yes, Birthday are definitely those days when we receive lots of wishes and gift from all of our family members and friends and all this makes us feel really special. I used to enjoy birthdays as a child. But as I’m getting older birthdays aren’t as exciting as they used to be earlier.</item>
        <item>Ans: Yes, if my memory serves me well, all of my childhood birthdays were celebrated in a very special manner. However, I can still remember one particular birthday- my thirteenth birthday, when I got a lot of gifts from my family and I was taken to an “Amusement Park” where I rode on roller coaster for the first time in my life and enjoyed the whole afternoon in a large amusement park with my family.</item>
        <item>Ans: My last birthday was quite fun. Though I couldn’t throw a party but there was a small get together only with my close family members. My friends surprised me with a delicious cake and we all had dinner together. It was not a big celebration but I could feel the warmth of my loved ones and that really made my day.</item>
        <item>Ans: I believe everyone loves receiving gifts. I am also one of them. I would love to receive Watches, Bags, and clothes as gifts. I also have a very nice collection of these. But most importantly, all these gifts should be branded.</item>
        <item>Ans: I prefer to celebrate my birthday with my family. I am a family guy, so I love to enjoy this precious time with my parents. After all, I can hang out with my friends all the time, but a birthday is a once-a-year thing.</item>
        <item>Ans: These days, birthdays are a big thing and people go all out in making their birthdays memorable. Earlier, people used to prepare traditional dishes on their birthdays and used to celebrate birthdays at home with some close friends and family members. They used to visit religious place to seek blessings from God whereas nowadays people prefer visiting restaurants or bars on their birthdays. Many youngsters love to go out of town to have fun with the friends on their birthdays. So yes, celebration of birthdays has changed a lot.</item>
        <item>Ans: I guess everyone loves to celebrate their birthdays no matter whether they are rich or poor. Some people are extravagant and throw huge fun-filled party and celebrate their birthdays with all their friends and family members. On the other hand, some people have to take care of their budget and accordingly they choose a low-key celebration. They cook food at home rather than going out to restaurants as that could be expensive. In my opinion birthdays are meant to bring your love ones together no matter whether the party is big or small.</item>
    </string-array>
</resources>