<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.shaikot.ielts.speaking.preparation.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.shaikot.ielts.speaking.preparation.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/nav_feedback"
        android:name="com.shaikot.ielts.speaking.preparation.ui.feedback.FeedbackFragment"
        android:label="@string/menu_send_feedback"
        tools:layout="@layout/fragment_feedback" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.shaikot.ielts.speaking.preparation.ui.share.ShareFragment"
        android:label="@string/menu_share_with_friends"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_rate"
        android:name="com.shaikot.ielts.speaking.preparation.ui.rateUs.RateUsFragment"
        android:label="@string/menu_rate_us"
        tools:layout="@layout/fragment_rate_us" />
</navigation>